respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Survey__c.object
<CustomObject>
    <description>Survey Force object</description>
    <fields>
        <fullName>Hide_Survey_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Hide Survey Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <summaryForeignKey>Survey_Question__c.Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Share_with_Guest_User__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Create a sharing setting to share surveys with this field checked with Guest Users.</description>
        <inlineHelpText>Create a sharing setting to share surveys with this field checked with Guest Users.</inlineHelpText>
        <label>Publicly Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_Response__c</fullName>
        <description>Message to be displayed to the user when the Survey has been submitted</description>
        <inlineHelpText>Message to be displayed to the user when the Survey has been submitted</inlineHelpText>
        <label>Submit Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Container_CSS__c</fullName>
        <defaultValue>&quot;#survey_container{margin: 10px}&quot;</defaultValue>
        <inlineHelpText>Example: #survey_container{ margin: 0 auto; width: 600px; box-shadow: 0 0 14px #CCCCCC; -moz-box-shadow: 0 0 14px #CCCCCC; -webkit-box-shadow: 0 0 14px #CCCCCC; }</inlineHelpText>
        <label>Survey Container CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Header__c</fullName>
        <label>Survey Header</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Thank_You_Link__c</fullName>
        <inlineHelpText>URL for redirecting the user after the survey is completed. The Thank You Text will not be shown if this field has a value.</inlineHelpText>
        <label>Thank You Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Thank_You_Text__c</fullName>
        <description>Message to be displayed to the user when the Survey has been submitted</description>
        <inlineHelpText>Message to be displayed to the user when the Survey has been submitted</inlineHelpText>
        <label>Thank You Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <defaultValue>&quot;Undefined&quot;</defaultValue>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankYouLink__c</fullName>
        <label>Thank You Link</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankYouText__c</fullName>
        <label>Thank You Text</label>
        <type>TextArea</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Questions__c</columns>
        <columns>Share_with_Guest_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>standard_view</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>standard view</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>